# rust_vm

./: .gitignore  BatPU-2 ISA.xlsx  Cargo.toml  README.md  fib.as  fib.mc  fib2.as  fib2.mc  hello.mc  lcov.info  license.txt  main.rs  opcodes.xlsx  screen.as  screen.mc  test.as  test.mc  test2.as  test2.mc  test3.as  test3.mc  test4.mc  test5.mc  test6.as  test6.mc  test7.mc  test8.mc  test9.as  test9.mc  test_bubble_sort.as  test_bubble_sort.mc  test_number_display1.as  test_number_display1.mc  test_number_display2.mc  test_number_display3.as  test_number_display3.mc  test_number_display4.mc  test_number_display5.mc
.github/workflows/: ci.yml
programs/: 2048.as  maze.mc
src/: alu.rs  bits.rs  call_stack.rs  control_rom.rs  error.rs  instruction_memory.rs  lib.rs  parser.rs  program_counter.rs  register.rs  utils.rs
src/alu/: alu_flags.rs  alu_settings.rs  mod.rs
src/bits/: error.rs  from_impl.rs  impl_ops.rs  macros.rs  mod.rs
src/control_rom/: mod.rs  tests.rs
src/io_devices/: character_display.rs  controller.rs  mod.rs  number_display.rs  rng.rs  screen.rs
src/parser/: error.rs  mod.rs  utils.rs
src/register/: mod.rs
src/registers/: call_stack.rs  data_memory.rs  mod.rs  register_file.rs
src/vm/: mod.rs  tests.rs
tests/: vm_exec_programs.rs
tests/test_programs/: fib.as  fib.mc  fib2.as  fib2.mc  gol_init.as  gol_init.mc  hello.as  hello.mc  logo.as  logo.mc  screen.mc  test.mc  test2.as  test2.mc  test3.mc  test4.as  test4.mc  test5.as  test5.mc  test6.mc  test7.as  test7.mc  test8.as  test8.mc  test9.as  test9.mc  test_bubble_sort.as  (+9 more)
(+40 files in other folders)
