[package]
name = "rust_vm"
version = "0.1.0"
edition = "2021"
authors = ["Quinn Cuijpers <Quinn.Cuijpers@gmail.com>"]
license = "MIT"
description = "A Rust-based virtual machine for educational purposes"

[[bin]]
name = "rust_vm"
path = "main.rs"

[dependencies]
minifb = "0.28.0"
phf = {version = "0.13.1", features = ["macros"]}
rand = "0.9.2"
phf_macros = "0.13.1"